# Project-Handler

./: .env  .env.example  .gitignore  README.md  classes.py  db_connect.py  main.py  models.py  pydantic_schemas.py  pyproject.toml  requirements.txt  schemas.py  test_data.json  test_data.py  user_data.json
.mypy_cache/3.13/: __future__.data.json  __future__.meta.json  _ast.data.json  _ast.meta.json  _asyncio.data.json  _asyncio.meta.json  _bisect.data.json  _bisect.meta.json  _blake2.data.json  _blake2.meta.json  _bz2.data.json  _bz2.meta.json  _codecs.data.json  _codecs.meta.json  _collections_abc.data.json  _collections_abc.meta.json  _compression.data.json  _compression.meta.json  _contextvars.data.json  _contextvars.meta.json  _ctypes.data.json  _ctypes.meta.json  _decimal.data.json  _decimal.meta.json  _frozen_importlib.data.json  _frozen_importlib.meta.json  _frozen_importlib_external.data.json  _frozen_importlib_external.meta.json  _hashlib.data.json  _hashlib.meta.json  _io.data.json  _io.meta.json  _operator.data.json  _operator.meta.json  _pickle.data.json  _pickle.meta.json  _queue.data.json  _queue.meta.json  _random.data.json  _random.meta.json  (+182 more)
alembic/: env.py
alembic/versions/: 2025_10_04_2355-1e9f6fd0c732_initial_commit.py
database/connections/: db_models.py
database/queries/: __init__.py  (+3 more)
models/: __init__.py  employee_models.py  note_models.py  project_models.py  relation_models.py  task_models.py
routers/: async_queries.py  data_handler.py  db_config.py  db_models.py  developers.py  employee.py  notes.py  projects.py  tasks.py
(+919 files in other folders)
