[project]
name = "projecthandler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles==24.1.0",
    "alembic>=1.16.5",
    "annotated-types==0.7.0",
    "anyio==4.10.0",
    "asyncpg==0.30.0",
    "click==8.2.1",
    "fastapi==0.116.1",
    "greenlet==3.2.4",
    "h11==0.16.0",
    "idna==3.10",
    "mypy==1.17.1",
    "mypy-extensions==1.1.0",
    "pathspec==0.12.1",
    "psycopg==3.2.9",
    "psycopg2-binary==2.9.10",
    "pydantic==2.11.7",
    "pydantic-core==2.33.2",
    "pydantic-settings==2.10.1",
    "python-dotenv==1.1.1",
    "python-multipart==0.0.20",
    "ruff==0.12.11",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.43",
    "starlette==0.47.2",
    "typing-extensions==4.14.1",
    "typing-inspection==0.4.1",
    "uvicorn==0.35.0",
]


[tool.ruff]
# Explicitly enable per-file-ignores
line-length = 88
select = ["E", "F", "W", "I", "N"]

extend-per-file-ignores = [
    { path = "routers/db_conn/queries_package/__init__.py", codes = ["F401", "F403", "F405"] },
    { path = "routers/db_conn/queries_package/**/*.py", codes = ["F401", "F405"] }
]

[tool.mypy]
python_version = "3.13"
[[tool.mypy.overrides]]
module = [
    "routers.db_conn.queries_package",
    "routers.db_conn.queries_package.*"
]
ignore_missing_imports = true
ignore_errors = true 
